--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Tesla Website created with React</title>
+    <title>Tesla</title>
     <meta
       name="description"
       content="Testing a new path to achieve master and agility with React"
